--- a/day0210/myshop.html
+++ b/day0210/myshop.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>내가 angel이다</h1>
-    <p>마스터에는 없겟쥐</p>
+    <b>myshop</b>
+    
 </body>
 </html>
