--- a/day0210/howto.html
+++ b/day0210/howto.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <b>안녕하세요 저는 이지현입니다</b>
+    <p>제가 하고 싶은 것은</p>
+    <h1>뭘까요??</h1>
+    <h3>하하하하하하하하하핳</h3>
+    <h2>소름이 돋네요</h2>
 </body>
 </html>
