--- a/day0214/ex8_lotto.html
+++ b/day0214/ex8_lotto.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+
 <style>
     *{ background-color: #add8e6;
 
     }
     .title{
         font-size: 30px;
-        margin: 30px 30px;
+        margin: 30px 100px;
     }
     .num{
         color: blueviolet;
@@ -23,21 +23,83 @@
         font-size: 22px;
     }
 
-    .box{
+    div.box{
         display: flex;
-        
-    }
-    .lotto{
+        justify-content: space-around;
+        align-items: center;
         width: 630px;
         height: 120px;
         background-color: beige;
         margin-left: 20px;
         margin-top: 20px;
         border-radius: 100px;
-
+    }
+    div.lotto{
+       font-size: 45px;
+       width: 80px;
+       height: 80px;
+       text-align: center;
+       line-height: 80px;
+       background-color: #ffb6c1;
+       border-radius: 100px;
+    }
+    #btnlotto{
+        width: 200px;
+        height: 60px;
+        margin: 30px 200px;
+        font-size: 23px;
+        cursor: pointer;    
+    }
+    #btnlotto:hover{
+        background-color: black;
+        color:white;
+        box-shadow: 5px 5px 5px gray;
     }
 
+
 </style>
+
+<script>
+    window.onload=function(){
+        //현재 날짜 구하기
+        let today=new Date();
+        let year=today.getFullYear();
+        let month=today.getMonth();
+        let day=today.getDate();
+
+        document.querySelector("b.day").innerHTML=`${year}.${month}.${day}`
+        //숫자 출력되는 곳의 요소값을 배열형태로 얻어보자
+        var lotto=document.querySelectorAll("div.box>div.lotto");
+        lotto[1].style.backgroundColor="#afeeee";
+        lotto[3].style.backgroundColor="#008000";
+
+        lotto[1].style.color="yellow";
+        lotto[3].style.color="blue";
+
+        //버튼 이벤트
+        document.getElementById("btnlotto").onclick=function(){
+            let nums=new Array(6);
+            //1~45사이의 난수값을 6개 구한다 
+            for(let i=0;i<nums.length;i++){
+                nums[i]=parseInt(Math.random()*45)+1;//1~45
+                //중복체크에서 같을 경우 다시 구한다
+                for(let j=0;j<i;j++){
+                    if(nums[i]==nums[j]){
+                        i--;
+                        break;
+                    }
+                }
+            }
+            //div.lotto에 위에서 구한 숫자를 넣어준다.
+
+            for(let idx in lotto){
+                lotto[idx].innerHTML=nums[idx];
+            }
+
+        }        
+    }
+</script>
+</head>
 <body>
     <div class="title"><b class="num">1025</b>회
         <b class="day">0000-00-00</b></div>
@@ -49,5 +111,6 @@
         <div class="lotto">1</div>
         <div class="lotto">1</div>
     </div>
+    <button type="button" id="btnlotto">로또 숫자 그리기</button>
 </body>
 </html>
