--- a/day0214/ex9_formtag.html
+++ b/day0214/ex9_formtag.html
@@ -49,7 +49,7 @@
             document.querySelector(".four").style.textDecoration="none";
             }
         }
-        //그룹라디오 버튼
+        //5번 그룹라디오 버튼
            let txtcolor=document.querySelectorAll(".txtcolor");
             
             for(let i=0;i<txtcolor.length;i++){
