--- a/day0216/ex5_transition.html
+++ b/day0216/ex5_transition.html
@@ -29,7 +29,7 @@
                     <!--dl은 반드시 하나 이상의 dt-dd 짝을 담고 있어야 합니다.
                     dt,dd는 dl 밖에서 독립적으로 사용할 수 없습니다.-->
                     <dd class="mask">
-                           <p><a href="#">포트테일(레이어드 이중지퍼)</a></p>
+                           <p><a href="https://docs.google.com/document/d/1BGq_hhJgLDHJHaRQ3a33tWujBRPfPV8IBpvEcptzNKQ/edit">포트테일(레이어드 이중지퍼)</a></p>
                         <p>요녀석하나만 손쉽게<br>오늘의 라이트스타일 완성<br>고민끝!!</p>
                         <p><a href="#">Detail View</a><br>가격문의</p>
                     </dd>            
