--- a/day0216/ex7_반응형.html
+++ b/day0216/ex7_반응형.html
@@ -9,6 +9,8 @@
         body,div,section,figure,figcaption,img{
             padding:0;
             margin: 0;
+
+            position:absolute left
         }
         section,figure,figcaption{
             display: block;
